err/github-watcher.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyGithub-1.35.egg-info'...
Listing './lib/python3.5/site-packages/PyJWT-1.5.3.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/github'...
Listing './lib/python3.5/site-packages/github/tests'...
Listing './lib/python3.5/site-packages/github/tests/ReplayData'...
Listing './lib/python3.5/site-packages/github_watcher'...
Compiling './lib/python3.5/site-packages/github_watcher/config.py'...
***   File "./lib/python3.5/site-packages/github_watcher/config.py", line 24
    print "Couldn't open your token file. Make sure it's writeable at ~/.github"
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/github_watcher/run.py'...
***   File "./lib/python3.5/site-packages/github_watcher/run.py", line 45
    print "You must store your github access token at ~/.github."
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/github_watcher-2.4.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jwt'...
Listing './lib/python3.5/site-packages/jwt/contrib'...
Listing './lib/python3.5/site-packages/jwt/contrib/algorithms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pync'...
Listing './lib/python3.5/site-packages/pync/vendor'...
Listing './lib/python3.5/site-packages/pync/vendor/terminal-notifier-1.6.1'...
Listing './lib/python3.5/site-packages/pync/vendor/terminal-notifier-1.6.1/terminal-notifier.app'...
Listing './lib/python3.5/site-packages/pync/vendor/terminal-notifier-1.6.1/terminal-notifier.app/Contents'...
Listing './lib/python3.5/site-packages/pync/vendor/terminal-notifier-1.6.1/terminal-notifier.app/Contents/MacOS'...
Listing './lib/python3.5/site-packages/pync/vendor/terminal-notifier-1.6.1/terminal-notifier.app/Contents/Resources'...
Listing './lib/python3.5/site-packages/pync/vendor/terminal-notifier-1.6.1/terminal-notifier.app/Contents/Resources/en.lproj'...
Listing './lib/python3.5/site-packages/pync-1.6.1.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/unidiff'...
Listing './lib/python3.5/site-packages/unidiff-0.5.4.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
